# benchmarkingML

./: Arellano2008.ipynb  LSMC_with_TPyTorch.ipynb  LSMC_with_TensorFlow.ipynb  SovereignDefault_with_PyTorch.ipynb  SovereignDefault_with_TensorFlow.ipynb
.ipynb_checkpoints/: LSMC-checkpoint.ipynb
LSMC/: C++.cpp  Julia.jl  PyTorch.py  TensorFlow.py  TensorFlow_TPU.py  main.jl  main_tf.py  matlab.m  python_numba.py  python_numpy.py  r.R
LSMC/cpp/: cpp_code.cpp
LSMC/cpp/armadillo-9.400.4/: README.md  docs.html
LSMC/cpp/armadillo-9.400.4/include/armadillo_bits/: arma_version.hpp  auxlib_meat.hpp  def_lapack.hpp  glue_solve_meat.hpp  sympd_helper.hpp
LSMC/cpp/armadillo-9.400.4/src/: wrapper.cpp
LSMC/cpp/linux/: CMakeLists.txt
LSMC/matlab/: Scale.m  advance.m  chebyshev_basis.m  compute_price.m  first_one.m  main.m  ridge_regression.m  where.m
Sovereign_Default/: JAX.py  P.txt  PyTorch.py  R.r  TensorFlow.py  julia.jl  python_numpy.py  tensorflow_TPU.py
Sovereign_Default/cpp/: cpp_armadillo.cpp  main.r
Sovereign_Default/matlab/: logy_grid.txt  main.m  matlab.m
